--- a/UI/Searching.UI.WinClient/MainPage.xaml
+++ b/UI/Searching.UI.WinClient/MainPage.xaml
@@ -1,22 +1,23 @@
 ﻿<phone:PhoneApplicationPage
-    x:Class="Searching.UI.WinClient.MainPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:phone="clr-namespace:Microsoft.Phone.Controls;assembly=Microsoft.Phone"
     xmlns:shell="clr-namespace:Microsoft.Phone.Shell;assembly=Microsoft.Phone"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:telerikPrimitives="clr-namespace:Telerik.Windows.Controls;assembly=Telerik.Windows.Controls.Primitives"
+    x:Class="Searching.UI.WinClient.MainPage"
     mc:Ignorable="d"
-    d:DataContext="{d:DesignData SampleData/MainViewModelSampleData.xaml}"
+
     FontFamily="{StaticResource PhoneFontFamilyNormal}"
     FontSize="{StaticResource PhoneFontSizeNormal}"
     Foreground="{StaticResource PhoneForegroundBrush}"
     SupportedOrientations="Portrait"  Orientation="Portrait"
-    shell:SystemTray.IsVisible="True">
+    shell:SystemTray.IsVisible="True" Loaded="PhoneApplicationPage_Loaded">
 
     <!--LayoutRoot is the root grid where all page content is placed-->
-    <Grid x:Name="LayoutRoot" Background="Transparent">
-         <!-- LOCALIZATION NOTE:
+
+    <!-- LOCALIZATION NOTE:
             To localize the displayed strings copy their values to appropriately named
             keys in the app's neutral language resource file (AppResources.resx) then
             replace the hard-coded text value between the attributes' quotation marks
@@ -36,48 +37,55 @@
          -->
 
 
-    <!--Pivot Control-->
-        <phone:Pivot Title="Searching ™ ">
-      <!--Pivot item one-->
-      <phone:PivotItem Header="Категории">
-        <!--Double line list with text wrapping-->
-        <ListBox x:Name="CategoriesList" Margin="0,0,-12,0" ItemsSource="{Binding Items}">
-          <ListBox.ItemTemplate>
-            <DataTemplate>
-              <StackPanel Margin="0,0,0,17" Width="432">
-                <TextBlock Text="{Binding LineOne}" TextWrapping="Wrap" Style="{StaticResource PhoneTextExtraLargeStyle}"/>
-                <TextBlock Text="{Binding LineTwo}" TextWrapping="Wrap" Margin="12,-6,12,0" Style="{StaticResource PhoneTextSubtleStyle}"/>
-              </StackPanel>
-            </DataTemplate>
-          </ListBox.ItemTemplate>
-        </ListBox>
-      </phone:PivotItem>
+    
+    <UserControl.Resources>
+        <DataTemplate x:Key="ListBoxItemTemplate1">
+            <Grid Margin="1" x:Name="TemplateLayoutRoot">
+                <Grid.Triggers>
+                    <EventTrigger>
+                        <BeginStoryboard>
+                            <Storyboard>
+                                <DoubleAnimation Storyboard.TargetName="TemplateLayoutRoot" Storyboard.TargetProperty="Opacity" From="0" To="1" Duration="0:0:0.5"/>
+                            </Storyboard>
+                        </BeginStoryboard>
+                    </EventTrigger>
+                </Grid.Triggers>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="120"/>
+                    <ColumnDefinition Width="320"/>
+                </Grid.ColumnDefinitions>
+                <!--<Image Grid.ColumnSpan="2" HorizontalAlignment="Left"  Source="{Binding BackgroundUri}" Width="440" Height="62" />
+                <Image Source="{Binding IconUri}" HorizontalAlignment="Left" Width="76" Height="62"/>-->
+                <StackPanel Grid.Column="1">
+                    <TextBlock Text="{Binding Name_Category}" FontWeight="Bold"/>
+                    <!--<TextBlock Text="{Binding Info_Category}"/>-->
+                </StackPanel>
+            </Grid>
+        </DataTemplate>
+    </UserControl.Resources>
+    <phone:Pivot x:Name="pvt">
+    <phone:PivotItem Header="Категории">
+        <Grid x:Name="LayoutRoot" Background="Transparent" Margin="{StaticResource PhoneHorizontalMargin}">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="*"/>
+            </Grid.RowDefinitions>
+            <StackPanel Orientation="Horizontal">
+               
+            </StackPanel>
+            <telerikPrimitives:RadDataBoundListBox CacheMode="BitmapCache" HorizontalAlignment="Stretch" Grid.Row="1" x:Name="DataBoundListBox1" ItemTemplate="{StaticResource ListBoxItemTemplate1}" Margin="10,10,-10,-10" ItemsSource="{Binding ListCategories}" ItemTap="DataBoundListBox1_ItemTap">
+                <telerikPrimitives:RadDataBoundListBox.ItemContainerStyle>
+                    <Style TargetType="telerikPrimitives:RadDataBoundListBoxItem">
+                        <Setter Property="HorizontalContentAlignment" Value="Stretch" />
+                    </Style>
+                </telerikPrimitives:RadDataBoundListBox.ItemContainerStyle>
+            </telerikPrimitives:RadDataBoundListBox>
 
-      <!--Pivot item two-->
-      <phone:PivotItem Header="second">
-        <!--Triple line list no text wrapping-->
-        <ListBox x:Name="SecondListBox" Margin="0,0,-12,0" ItemsSource="{Binding Items}">
-          <ListBox.ItemTemplate>
-            <DataTemplate>
-              <StackPanel Margin="0,0,0,17">
-                <TextBlock Text="{Binding LineOne}" TextWrapping="NoWrap" Margin="12,0,0,0" Style="{StaticResource PhoneTextExtraLargeStyle}"/>
-                <TextBlock Text="{Binding LineThree}" TextWrapping="NoWrap" Margin="12,-6,0,0" Style="{StaticResource PhoneTextSubtleStyle}"/>
-              </StackPanel>
-            </DataTemplate>
-          </ListBox.ItemTemplate>
-        </ListBox>
-      </phone:PivotItem>
+        </Grid>
+    </phone:PivotItem>
+        <phone:PivotItem Header="Профиль">
+            
+        </phone:PivotItem>
     </phone:Pivot>
-
-        <!--Uncomment to see an alignment grid to help ensure your controls are
-            aligned on common boundaries.  The image has a top margin of -32px to
-            account for the System Tray. Set this to 0 (or remove the margin altogether)
-            if the System Tray is hidden.
-
-            Before shipping remove this XAML and the image itself.-->
-        <!--<Image Source="/Assets/AlignmentGrid.png" VerticalAlignment="Top" Height="800" Width="480" Margin="0" Grid.Row="0" Grid.RowSpan="2" IsHitTestVisible="False" />-->
-
-    </Grid>
-
 </phone:PhoneApplicationPage>
-
+ 
