--- a/UI/Searching.UI.WinClient/MainPage.xaml
+++ b/UI/Searching.UI.WinClient/MainPage.xaml
@@ -8,35 +8,24 @@
     xmlns:telerikPrimitives="clr-namespace:Telerik.Windows.Controls;assembly=Telerik.Windows.Controls.Primitives"
     x:Class="Searching.UI.WinClient.MainPage"
     mc:Ignorable="d"
-
     FontFamily="{StaticResource PhoneFontFamilyNormal}"
     FontSize="{StaticResource PhoneFontSizeNormal}"
     Foreground="{StaticResource PhoneForegroundBrush}"
     SupportedOrientations="Portrait"  Orientation="Portrait"
     shell:SystemTray.IsVisible="True" Loaded="PhoneApplicationPage_Loaded">
 
+    <!--Sample code showing usage of ApplicationBar-->
+    <phone:PhoneApplicationPage.ApplicationBar>
+        <shell:ApplicationBar IsVisible="True" IsMenuEnabled="True">
+            <shell:ApplicationBar.MenuItems>
+                <shell:ApplicationBarMenuItem Text="MenuItem 1"/>
+                <shell:ApplicationBarMenuItem Text="MenuItem 2"/>
+            </shell:ApplicationBar.MenuItems>
+
+        </shell:ApplicationBar>
+    </phone:PhoneApplicationPage.ApplicationBar>
+
     <!--LayoutRoot is the root grid where all page content is placed-->
-
-    <!-- LOCALIZATION NOTE:
-            To localize the displayed strings copy their values to appropriately named
-            keys in the app's neutral language resource file (AppResources.resx) then
-            replace the hard-coded text value between the attributes' quotation marks
-            with the binding clause whose path points to that string name.
-
-            For example:
-
-                Text="{Binding Path=LocalizedResources.ApplicationTitle, Source={StaticResource LocalizedStrings}}"
-
-            This binding points to the template's string resource named "ApplicationTitle".
-
-            Adding supported languages in the Project Properties tab will create a
-            new resx file per language that can carry the translated values of your
-            UI strings. The binding in these examples will cause the value of the
-            attributes to be drawn from the .resx file that matches the
-            CurrentUICulture of the app at run time.
-         -->
-
-
     <Grid x:Name="LayoutRoot" Background="Transparent">
         <Grid.Resources>
             <Style x:Key="DataBoundListBoxCheckBoxStyle" TargetType="telerikPrimitives:ItemCheckBox">
@@ -64,28 +53,66 @@
         <TextBlock x:Name="ApplicationTitle" Margin="24,17,0,0" Text="Searching" Style="{StaticResource PhoneTextNormalStyle}"/>
 
         <Grid Grid.Row="1">
-            <phone:Pivot x:Name="MainPivot" Margin="0,-12,0,0">
+
+
+
+            <!--Pivot Control-->
+            <phone:Pivot>
+                <!--Pivot item one-->
                 <phone:PivotItem Header="Категории">
-                    <telerikPrimitives:RadDataBoundListBox Margin="-12,6,12,0"
-                                                        x:Name="DataBoundListBox1"
-                                                        ItemsSource="{Binding listCategories}"
-                                                        IsCheckModeEnabled="True"
-                                                        IsCheckModeActiveChanged="RadDataBoundListBox_IsCheckModeActiveChanged"
-                                                        CheckBoxStyle="{StaticResource DataBoundListBoxCheckBoxStyle}"
-                                                        ItemTemplate="{StaticResource DataBoundListBoxItemTemplate}"/>
+                    <!--Double line list with text wrapping-->
+                    <StackPanel>
+                        <Grid Height="97">
+                            <telerikPrimitives:RadTextBox x:Name="radTextBox1" HorizontalAlignment="Left" Margin="0,-4,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="329" Height="72"/>
+                            <Button x:Name="button1" Content="Filter" HorizontalAlignment="Left" Margin="329,-4,0,29" VerticalAlignment="Bottom" Width="117" RenderTransformOrigin="0.421,0.5" BorderBrush="{StaticResource PhoneBackgroundBrush}">
+                                <Button.Background>
+                                    <SolidColorBrush Color="#FF0F89DE"/>
+                                </Button.Background>
+                            </Button>
+
+                        </Grid>
+                        <Grid Height="424">
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="131*"/>
+                                <ColumnDefinition Width="21*"/>
+                            </Grid.ColumnDefinitions>
+                            <telerikPrimitives:RadBusyIndicator x:Name="LoadIndicator" IsRunning='True' AnimationStyle="AnimationStyle7" Foreground="#FF2D87D3" RenderTransformOrigin="0.496,0.295" Grid.ColumnSpan="2" Margin="0,171,0,131" />
+                            <telerikPrimitives:RadDataBoundListBox x:Name="CategoriesListBox"
+                    			ItemsSource="{Binding listCategories}"
+                    			IsCheckModeEnabled="True"	
+                    			CheckBoxStyle="{StaticResource DataBoundListBoxCheckBoxStyle}"
+                    			ItemTemplate="{StaticResource DataBoundListBoxItemTemplate}" ItemTap="DataBoundListBox1_ItemTap" EmptyContent="" Margin="0,0,0,-54" Grid.ColumnSpan="2"/>
+                        </Grid>
+                    </StackPanel>
                 </phone:PivotItem>
+
+                <!--Pivot item two-->
                 <phone:PivotItem Header="Профиль">
-                    <telerikPrimitives:RadDataBoundListBox 
-                                                        x:Name="DataBoundListBox2"
-                                                        Margin="-12,6,12,0"
-                                                        ItemsSource="{Binding Items}" 
-                                                        IsCheckModeEnabled="True"
-                                                        IsCheckModeActiveChanged="RadDataBoundListBox_IsCheckModeActiveChanged"
-                                                        CheckBoxStyle="{StaticResource DataBoundListBoxCheckBoxStyle}"
-                                                        ItemTemplate="{StaticResource DataBoundListBoxItemTemplate}"/>
+                    <!--Triple line list no text wrapping-->
+                    <StackPanel>
+                        <Grid Height="386">
+                            <TextBlock x:Name="textBlock" HorizontalAlignment="Left" Margin="10,10,0,0" TextWrapping="Wrap" Text="E-mail:" VerticalAlignment="Top" RenderTransformOrigin="1.239,0.677"/>
+                            <telerikPrimitives:RadTextBox x:Name="radTextBox" HorizontalAlignment="Left" Margin="0,25,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="446"/>
+                            <TextBlock x:Name="textBlock1" HorizontalAlignment="Left" Margin="10,110,0,0" TextWrapping="Wrap" Text="Пароль:" VerticalAlignment="Top" RenderTransformOrigin="0.486,0.646"/>
+                            <telerikPrimitives:RadPasswordBox HorizontalAlignment="Left" Margin="0,125,0,0" VerticalAlignment="Top" Width="446"/>
+                            <Button x:Name="button" Content="Войти" HorizontalAlignment="Left" Margin="0,210,0,0" VerticalAlignment="Top" Width="446" FontWeight="Bold" Background="#FF01B3E8" Foreground="White" BorderBrush="{StaticResource PhoneBackgroundBrush}" Height="80"/>
+                            <HyperlinkButton Content="Забыли пароль?" HorizontalAlignment="Left" Margin="125,295,0,0" VerticalAlignment="Top" Foreground="#FF0476A0" FontStretch="UltraCondensed"/>
+                            <HyperlinkButton Content="Зарегистрируйтесь" HorizontalAlignment="Left" Margin="115,345,0,0" VerticalAlignment="Top" Foreground="#FF0476A0" FontStretch="UltraCondensed"/>
+
+                        </Grid>
+                    </StackPanel>
                 </phone:PivotItem>
             </phone:Pivot>
+
+            <!--Uncomment to see an alignment grid to help ensure your controls are
+            aligned on common boundaries.  The image has a top margin of -32px to
+            account for the System Tray. Set this to 0 (or remove the margin altogether)
+            if the System Tray is hidden.
+
+            Before shipping remove this XAML and the image itself.-->
+            <!--<Image Source="/Assets/AlignmentGrid.png" VerticalAlignment="Top" Height="800" Width="480" Margin="0" Grid.Row="0" Grid.RowSpan="2" IsHitTestVisible="False" />-->
 
         </Grid>
     </Grid>
 </phone:PhoneApplicationPage>
+
