--- a/UI/Searching.UI.WinClient/MainPage.xaml
+++ b/UI/Searching.UI.WinClient/MainPage.xaml
@@ -18,8 +18,8 @@
     <phone:PhoneApplicationPage.ApplicationBar>
         <shell:ApplicationBar IsVisible="True" IsMenuEnabled="True">
             <shell:ApplicationBar.MenuItems>
-                <shell:ApplicationBarMenuItem Text="MenuItem 1"/>
-                <shell:ApplicationBarMenuItem Text="MenuItem 2"/>
+                <shell:ApplicationBarMenuItem Text="Настройки"/>
+                <shell:ApplicationBarMenuItem Text="О приложени"/>
             </shell:ApplicationBar.MenuItems>
 
         </shell:ApplicationBar>
@@ -40,7 +40,7 @@
                     <Image Width="99" Height="99" Source="{Binding ImageThumbnailSource}"/>
                     <StackPanel Margin="12,-14,0,0" Grid.Column="1">
                         <TextBlock FontSize="{StaticResource PhoneFontSizeExtraLarge}" FontFamily="{StaticResource PhoneFontFamilySemiLight}" Text="{Binding Name_Category}" TextWrapping="Wrap"/>
-                        <TextBlock FontSize="{StaticResource PhoneFontSizeNormal}" Text="{Binding Info_Category}" TextWrapping="Wrap"/>
+                        <!--<TextBlock FontSize="{StaticResource PhoneFontSizeNormal}" Text="{Binding Info_Category}" TextWrapping="Wrap"/>-->
                     </StackPanel>
                 </Grid>
             </DataTemplate>
@@ -61,9 +61,9 @@
                 <!--Pivot item one-->
                 <phone:PivotItem Header="Категории">
                     <!--Double line list with text wrapping-->
-                    <StackPanel>
+                    <StackPanel x:Name="CategoriesPanel" Tag="1" Visibility="Visible">
                         <Grid Height="97">
-                            <telerikPrimitives:RadTextBox x:Name="radTextBox1" HorizontalAlignment="Left" Margin="0,-4,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="329" Height="72"/>
+                            <telerikPrimitives:RadTextBox x:Name="radTextBox1" HorizontalAlignment="Left" Margin="0,-4,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="329" Height="72"/>
                             <Button x:Name="button1" Content="Filter" HorizontalAlignment="Left" Margin="329,-4,0,29" VerticalAlignment="Bottom" Width="117" RenderTransformOrigin="0.421,0.5" BorderBrush="{StaticResource PhoneBackgroundBrush}">
                                 <Button.Background>
                                     <SolidColorBrush Color="#FF0F89DE"/>
@@ -71,19 +71,27 @@
                             </Button>
 
                         </Grid>
-                        <Grid Height="424">
+                        <Grid Height="424" x:Name="CategoriesGrid">
                             <Grid.ColumnDefinitions>
                                 <ColumnDefinition Width="131*"/>
                                 <ColumnDefinition Width="21*"/>
                             </Grid.ColumnDefinitions>
-                            <telerikPrimitives:RadBusyIndicator x:Name="LoadIndicator" IsRunning='True' AnimationStyle="AnimationStyle7" Foreground="#FF2D87D3" RenderTransformOrigin="0.496,0.295" Grid.ColumnSpan="2" Margin="0,171,0,131" />
+                            <telerikPrimitives:RadBusyIndicator x:Name="LoadIndicator" IsRunning='True' AnimationStyle="AnimationStyle8" Foreground="#FF2D87D3" RenderTransformOrigin="0.496,0.295" Grid.ColumnSpan="2" Margin="0,171,0,131" />
                             <telerikPrimitives:RadDataBoundListBox x:Name="CategoriesListBox"
                     			ItemsSource="{Binding listCategories}"
                     			IsCheckModeEnabled="True"	
                     			CheckBoxStyle="{StaticResource DataBoundListBoxCheckBoxStyle}"
-                    			ItemTemplate="{StaticResource DataBoundListBoxItemTemplate}" ItemTap="DataBoundListBox1_ItemTap" EmptyContent="" Margin="0,0,0,-54" Grid.ColumnSpan="2"/>
+                    			ItemTemplate="{StaticResource DataBoundListBoxItemTemplate}" ItemTap="DataBoundListBox1_ItemTap" EmptyContent="" Margin="-63,0,10,10" Grid.ColumnSpan="2"/>
+                        </Grid>
+                        <Grid x:Name="AnnouncingGrid" Visibility="Collapsed">
+                            <telerikPrimitives:RadDataBoundListBox x:Name="AnnouncingListBox"
+                    			ItemsSource="{Binding listCategories}"
+                    			IsCheckModeEnabled="True"	
+                    			CheckBoxStyle="{StaticResource DataBoundListBoxCheckBoxStyle}"
+                    			ItemTemplate="{StaticResource DataBoundListBoxItemTemplate}" ItemTap="DataBoundListBox1_ItemTap" EmptyContent="" Margin="-63,0,10,10" Grid.ColumnSpan="2"/>
                         </Grid>
                     </StackPanel>
+                    
                 </phone:PivotItem>
 
                 <!--Pivot item two-->
