--- a/UI/Searching.UI.WinClient/MainPage.xaml
+++ b/UI/Searching.UI.WinClient/MainPage.xaml
@@ -5,6 +5,7 @@
     xmlns:shell="clr-namespace:Microsoft.Phone.Shell;assembly=Microsoft.Phone"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:local="clr-namespace:Searching.UI.WinClient.Common"
     xmlns:telerikPrimitives="clr-namespace:Telerik.Windows.Controls;assembly=Telerik.Windows.Controls.Primitives"
     x:Class="Searching.UI.WinClient.MainPage"
     mc:Ignorable="d"
@@ -13,7 +14,13 @@
     Foreground="{StaticResource PhoneForegroundBrush}"
     SupportedOrientations="Portrait"  Orientation="Portrait"
     shell:SystemTray.IsVisible="True" Loaded="PhoneApplicationPage_Loaded">
-
+    
+    <phone:PhoneApplicationPage.Resources>
+        <local:MyListDataSelector x:Key="selector">
+            
+        </local:MyListDataSelector>
+    </phone:PhoneApplicationPage.Resources>
+   
     <!--Sample code showing usage of ApplicationBar-->
     <phone:PhoneApplicationPage.ApplicationBar>
         <shell:ApplicationBar IsVisible="True" IsMenuEnabled="True">
@@ -45,10 +52,12 @@
                 </Grid>
             </DataTemplate>
         </Grid.Resources>
+        
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
+        
 
         <TextBlock x:Name="ApplicationTitle" Margin="24,17,0,0" Text="Searching" Style="{StaticResource PhoneTextNormalStyle}"/>
 
@@ -60,6 +69,7 @@
             <phone:Pivot>
                 <!--Pivot item one-->
                 <phone:PivotItem Header="Категории">
+                    
                     <!--Double line list with text wrapping-->
                     <StackPanel x:Name="CategoriesPanel" Tag="1" Visibility="Visible">
                         <Grid Height="97">
