--- a/UI/Searching.UI.WinClient/Forms/Filter.xaml
+++ b/UI/Searching.UI.WinClient/Forms/Filter.xaml
@@ -16,31 +16,42 @@
     shell:SystemTray.IsVisible="True">
 
     <!--LayoutRoot is the root grid where all page content is placed-->
-    <Grid x:Name="LayoutRoot" Background="Transparent">
+    <Grid x:Name="LayoutRoot" Background="Transparent" Margin="0,0,0,-105">
         <!--Pivot Control-->
-        <phone:Pivot>
+        <phone:Pivot Margin="0,0,0,-171">
             <phone:PivotItem Header="Фильтр" Margin="0,10,24,-95">
-                <StackPanel>
-                    <Grid Height="719">
-                        <TextBlock x:Name="textBlock" HorizontalAlignment="Left" Margin="10,34,0,0" TextWrapping="Wrap" Text="Локация" VerticalAlignment="Top"/>
-                        <telerikInput:RadListPicker Height="58" Margin="14,61,10,0"/>
-                        <telerikInput:RadListPicker HorizontalAlignment="Left" Margin="14,148,0,0" VerticalAlignment="Top" Width="432"/>
-                        <telerikInput:RadListPicker HorizontalAlignment="Left" Margin="14,235,0,0" VerticalAlignment="Top" Width="432"/>
-                        <TextBlock x:Name="textBlock1" HorizontalAlignment="Left" Margin="14,322,0,0" TextWrapping="Wrap" Text="Пол автора объявления" VerticalAlignment="Top"/>
-                        <telerikInput:RadListPicker HorizontalAlignment="Left" Margin="14,354,0,0" VerticalAlignment="Top" Width="432"/>
-                        <TextBlock x:Name="textBlock2" HorizontalAlignment="Left" Margin="14,430,0,0" TextWrapping="Wrap" Text="Возвраст автора объявления" VerticalAlignment="Top"/>
-                        <TextBlock x:Name="textBlock3" HorizontalAlignment="Left" Margin="37,474,0,0" TextWrapping="Wrap" Text="от:" VerticalAlignment="Top"/>
+                
+                   
+                    <StackPanel>
+                    
+                    <Grid Height="853">
+                        <ScrollViewer Width="Auto" VerticalScrollBarVisibility="Visible" HorizontalScrollBarVisibility="Visible" Margin="0,-10,0,10">
+                            <ScrollViewer.Content>
+                                <StackPanel Height="847" Background="Black" Width="auto">
+                                <TextBlock x:Name="textBlock" HorizontalAlignment="Left"  TextWrapping="Wrap" Text="Локация" VerticalAlignment="Top"/>
+                        <telerikInput:RadListPicker Height="58" Margin="0" Canvas.Left="14" Canvas.Top="61" Width="432"/>
+                        <telerikInput:RadListPicker HorizontalAlignment="Left"  VerticalAlignment="Top" Width="432"/>
+                        <telerikInput:RadListPicker HorizontalAlignment="Left"  VerticalAlignment="Top" Width="432"/>
+                        <TextBlock x:Name="textBlock1" HorizontalAlignment="Left" TextWrapping="Wrap" Text="Пол автора объявления" VerticalAlignment="Top"/>
+                        <telerikInput:RadListPicker HorizontalAlignment="Left"  VerticalAlignment="Top" Width="432"/>
+                        <TextBlock x:Name="textBlock2" HorizontalAlignment="Left"  TextWrapping="Wrap" Text="Возвраст автора объявления" VerticalAlignment="Top"/>
+                                    <StackPanel HorizontalAlignment="Left" Height="55" Orientation="Horizontal" Width="449">
+                                        <TextBlock x:Name="textBlock3" HorizontalAlignment="Left"  TextWrapping="Wrap" Text="от:" VerticalAlignment="Center"/>
+                                        <telerikPrimitives:RadTextBox x:Name="radTextBox"   TextWrapping="Wrap" Text=""  Width="66" Height="55" />
+                                        <TextBlock x:Name="textBlock4" HorizontalAlignment="Left"  TextWrapping="Wrap" Text="до:" VerticalAlignment="Center"/>
+                                        <telerikPrimitives:RadTextBox x:Name="radTextBox1" HorizontalAlignment="Left"  TextWrapping="Wrap" Text="" VerticalAlignment="Center" Height="55" Width="66"/>
+                                    </StackPanel>
+                                    <TextBlock x:Name="textBlock5" HorizontalAlignment="Left" TextWrapping="Wrap" Text="Дата объявления:" VerticalAlignment="Top"/>
+                        <telerikInput:RadListPicker HorizontalAlignment="Left"  VerticalAlignment="Top" Width="432"/>
+                        <Button x:Name="button" Content="Ok" HorizontalAlignment="Right"  VerticalAlignment="Top"/>
 
-                        <telerikPrimitives:RadTextBox x:Name="radTextBox" HorizontalAlignment="Left" Margin="61,457,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="74" RenderTransformOrigin="0.463,0.353" Height="57"/>
-                        <TextBlock x:Name="textBlock4" HorizontalAlignment="Left" Margin="140,474,0,0" TextWrapping="Wrap" Text="до:" VerticalAlignment="Top" RenderTransformOrigin="0.384,0.377"/>
-                        <telerikPrimitives:RadTextBox x:Name="radTextBox1" HorizontalAlignment="Left" Margin="167,457,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Height="57" Width="66" RenderTransformOrigin="0.474,0.43"/>
-                        <TextBlock x:Name="textBlock5" HorizontalAlignment="Left" TextWrapping="Wrap" Text="Дата объявления:" VerticalAlignment="Top" Margin="14,519,0,0"/>
-                        <telerikInput:RadListPicker HorizontalAlignment="Left" Margin="14,551,0,0" VerticalAlignment="Top" Width="432"/>
-                        <Button x:Name="button" Content="Ok" HorizontalAlignment="Left" Margin="329,637,0,0" VerticalAlignment="Top"/>
-
+                                </StackPanel>
+                            </ScrollViewer.Content>
+                        </ScrollViewer>
                     </Grid>
 
                 </StackPanel>
+                
             </phone:PivotItem>
 
             <phone:PivotItem Header="Сортировка">
